似たような青色を入力された場合どうなるのでしょうか？

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,11 @@
     --input: 220 13% 91%;
     --ring: 142.1 76.2% 36.3%;
     --radius: 0.5rem;
+    --chart-1: 205 90% 50%;
+    --chart-2: 175 70% 40%;
+    --chart-3: 38 92% 50%;
+    --chart-4: 220 13% 80%;
+    --chart-5: 0 0% 50%;
   }
 
   .dark {
@@ -46,6 +51,11 @@
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
     --ring: 142.1 76.2% 36.3%;
+    --chart-1: 205 90% 60%;
+    --chart-2: 175 70% 50%;
+    --chart-3: 38 92% 60%;
+    --chart-4: 220 13% 30%;
+    --chart-5: 0 0% 70%;
   }
 }
 
